# g-ocr

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: workflow.yml
g_ocr/: __init__.py  cli.py  formats.py  pipeline.py  pretrained.py
node/: README.md  cli.js  index.js  package.json
